--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,12 +11,12 @@
     <PackageVersion Include="NUnit" Version="4.1.0" />
     <PackageVersion Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.8" />
+    <PackageVersion Include="Uno.Core" Version="4.1.1" />
     <PackageVersion Include="Uno.UITest.Helpers" Version="1.1.0-dev.70" />
     <PackageVersion Include="Xamarin.UITest" Version="4.3.4" />
-
     <PackageVersion Include="Uno.ShowMeTheXAML" Version="2.0.0-dev0015" />
     <PackageVersion Include="Uno.ShowMeTheXAML.MSBuild" Version="2.0.0-dev0015" />
-
     <PackageVersion Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.200" />
     <PackageVersion Include="Uno.CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.200" />
     <PackageVersion Include="CommunityToolkit.WinUI.Lottie" Version="8.0.280225" />
@@ -28,12 +28,10 @@
     <PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.NET.ILLink.Tasks" Version="8.0.100-1.23067.1" />
     <PackageVersion Include="Microsoft.TypeScript.Compiler" Version="3.1.5" />
     <PackageVersion Include="Microsoft.TypeScript.MSBuild" Version="4.6.4" />
     <PackageVersion Include="NunitXml.TestLogger" Version="3.0.131" />
     <PackageVersion Include="nventive.Nimue.Application.Packaging" Version="0.1.0-alpha.58" />
     <PackageVersion Include="Xamarin.TestCloud.Agent" Version="0.23.2" />
-
   </ItemGroup>
 </Project>
