--- a/Uno.Gallery/Uno.Gallery.csproj
+++ b/Uno.Gallery/Uno.Gallery.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Uno.Sdk">
+﻿<Project Sdk="Uno.Sdk.Private">
   <PropertyGroup>
 	<TargetFrameworks>
-	  net8.0-android;
+	  <!--net8.0-android;
 	  net8.0-ios;
 	  net8.0-maccatalyst;
 	  net8.0-windows10.0.19041;
-	  net8.0-desktop;
+	  net8.0-desktop;-->
 	  net8.0-browserwasm;
 	</TargetFrameworks>
 
@@ -36,15 +36,13 @@
 	  https://aka.platform.uno/singleproject-features
 	-->
 	<UnoFeatures>
-	  Material;
-	  MediaElement;
-	  Toolkit;
-	  Cupertino;
-	  Lottie;
-	  Skia;
-	  Svg;
-	  Logging;
-	  Extensions;
+		Material;
+		Toolkit;
+		Cupertino;
+		Lottie;
+		Skia;
+		Svg;
+		WebAssemblySkiaRenderer;
 	</UnoFeatures>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -55,6 +53,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="SkiaSharp.Skottie" />
+	<PackageReference Include="Uno.Core" />
 	<PackageReference Include="Uno.ShowMeTheXAML" />
 	<PackageReference Include="Uno.ShowMeTheXAML.MSBuild" />
 	<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" />
@@ -62,7 +62,6 @@
 	<PackageReference Include="Microsoft.Extensions.Logging" />
 	<PackageReference Include="Microsoft.Extensions.Logging.Console" />
 	<PackageReference Include="Microsoft.Extensions.Logging.Debug" />
-	<PackageReference Include="Microsoft.NET.ILLink.Tasks" />
 	<PackageReference Include="NunitXml.TestLogger" />
 	<PackageReference Include="nventive.Nimue.Application.Packaging" />
   </ItemGroup>
@@ -110,10 +109,13 @@
 		<ItemGroup>
 			<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" />
 			<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls.DataGrid" />
-			<PackageReference Include="Microsoft.TypeScript.Compiler" />
+			<!--<PackageReference Include="Microsoft.TypeScript.Compiler" />
 			<PackageReference Include="Microsoft.TypeScript.MSBuild" />
-			<EmbeddedResource Include="$(WasmProjectFolder)WasmScripts\*.js" />
+			<EmbeddedResource Include="$(WasmProjectFolder)WasmScripts\*.js" />-->
 		</ItemGroup>
+		  <PropertyGroup>
+			  <IsUnoHead>true</IsUnoHead>
+		  </PropertyGroup>
 	  </When>
   </Choose>
 
