chore: Adjust version, and nuget.config (temporary for local testing)

--- a/nuget.config
+++ b/nuget.config
@@ -8,5 +8,6 @@
             InvalidProjectFileException: The SDK 'Uno.Sdk' specified could not be found.
          -->
         <add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
+        <add key="Local" value="Local" />
     </packageSources>
 </configuration>
